# NeuroLens

./: LICENSE  README.md  env.example  pyproject.toml  requirements.txt
api/: main.py
api/schemas/: prediction.py
configs/: default.yaml
notebooks/03_training/: NeuroLens_Training.ipynb
research/gap_analysis/: research_position.md
scripts/: train.py
src/neurolens/data/loaders/: rfmid_dataset.py
src/neurolens/data/preprocessing/: fundus_transforms.py
src/neurolens/inference/conformal/: predictor.py
src/neurolens/inference/uncertainty/: decomposer.py
src/neurolens/models/: bayes_vit.py
src/neurolens/models/bayesian/: fim_prior.py  variational_linear.py
src/neurolens/models/manifold/: geodesic_attention.py
src/neurolens/training/losses/: elbo_loss.py
tests/unit/test_inference/: test_conformal.py
tests/unit/test_models/: test_variational_linear.py
