[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurolens"
version = "0.1.0"
description = "Riemannian-Bayesian Federated Vision Intelligence for Neurological Disease Detection"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Your Name", email = "your@email.com" }]
keywords = [
    "bayesian-deep-learning",
    "medical-imaging",
    "uncertainty-quantification",
    "riemannian-geometry",
    "federated-learning",
    "vision-transformer",
    "retinal-imaging",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/yourusername/neurolens"
Paper = "https://arxiv.org/abs/XXXX.XXXXX"
Documentation = "https://neurolens.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=src/neurolens --cov-report=term-missing"

[tool.coverage.run]
source = ["src/neurolens"]
omit = ["tests/*", "notebooks/*"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
ignore = ["E501"]